<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBDFC8"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/sapa"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/allerta_stencil"
                android:text="@string/keinginan"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="187dp"
                    android:background="@drawable/neuronkid"
                    android:scaleType="fitXY" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/alfa_slab_one"

                android:text="@string/nu"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pnjl_nu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/allerta_stencil"
                android:padding="2dp"
                android:text="@string/pjln"
                android:textAlignment="viewStart"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/alfa_slab_one"
                android:padding="10dp"
                android:text="@string/judulmateri"
                android:textAlignment="center"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyleview"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="261dp" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>